portfolio primary stage upload

--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Shafin Muhammad</h1>
+
+    <section class="top-section">
+
+        <div class="half-width">
+            <h1>Hello</h1>
+            <h1>I'm <span class="text-highlight">Shafin</span> </h1>
+            <h3>Frontend Developer</h3>
+            <p class="gray-text">I am a fresh graduate from Bangladesh Army International University of
+                Science and Technology. Seeking forward to build up my career as a
+                key person, where I can get an exposure to contribute in a company to
+                integrate my knowledge, skills and experience to add value and explore
+                my potentials growth opportunity with learning environment.
+            </p>
+            <a href="#" target="_blank"><button class="violetButton">Hire me</button></a>
+        </div>
+
+        <div class="half-width">
+            <img src="./images/profile pic 1.png" alt="image not found">
+
+        </div>
+    </section>
+
+
+    <section class="middle-section">
+        <div class="half-width">
+            <img src="./images/profile pic2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Education</h1>
+            <p><b>B.Sc.</b> in <b>Computer Science and Engineering</b> at Bangladesh Army International University of Science and
+                technology, Comilla
+            </p>
+            <p><b>CGPA: </b> 3.90 out of 4.00</p>
+            <p><b>B.Sc.</b> in <b>Computer Science and Engineering</b> at Bangladesh Army International University of Science and
+                technology, Comilla
+            </p>
+            <p><b>CGPA: </b> 3.90 out of 4.00</p>
+            <p><b>B.Sc.</b> in <b>Computer Science and Engineering</b> at Bangladesh Army International University of Science and
+                technology, Comilla
+            </p>
+            <p><b>CGPA: </b> 3.90 out of 4.00</p>
+            <a href="./files/Khandakar Md Shafin - cv .pdf" target="_blank"><button class="violetButton">Download CV</button></a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <div class="half-width experienceDesign" id="fullStack">
+            <h3 class="text-highlight">2020-Present|Full Stack web Developer</h3>
+            <p class="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste harum sapiente optio reiciendis? Ipsa consequatur eos itaque, veritatis ipsum voluptatibus labore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis est rerum iure delectus dolorem sit qui quis reprehenderit nobis tempora.</p>
+        </div>
+        <div class="half-width experienceDesign" id="juniorDev">
+            <h3 class="text-highlight">2019-2020|Junior Web Developer</h3>
+            <p class="gray-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, sapiente facere vitae minus itaque tenetur atque modi delectus error hic natus consequuntur qui vel fuga beatae unde! Voluptatum tempora autem, ab omnis facere porro quis officiis enim excepturi nulla debitis.</p>
+        </div>
+    </section>
+
+
+    
+        <footer>
+            &copy2021 all rights are reserved by Khandakar Md Shafin
+        </footer>
+    
+
 </body>
+
 </html>
