Education section updated

--- a/index.html
+++ b/index.html
@@ -47,14 +47,12 @@
                 technology, Comilla
             </p>
             <p><b>CGPA: </b> 3.90 out of 4.00</p>
-            <p><b>B.Sc.</b> in <b>Computer Science and Engineering</b> at Bangladesh Army International University of Science and
-                technology, Comilla
+            <p><b>HSC</b> at Comilla Residential College, Comilla
             </p>
-            <p><b>CGPA: </b> 3.90 out of 4.00</p>
-            <p><b>B.Sc.</b> in <b>Computer Science and Engineering</b> at Bangladesh Army International University of Science and
-                technology, Comilla
+            <p><b>GPA: </b> 4.42 out of 5.00</p>
+            <p><b>SSC</b> at Comilla Residential School, Comilla
             </p>
-            <p><b>CGPA: </b> 3.90 out of 4.00</p>
+            <p><b>GPA: </b> 5.00 out of 5.00</p>
             <a href="./files/Khandakar Md Shafin - cv .pdf" target="_blank"><button class="violetButton">Download CV</button></a>
         </div>
     </section>
